<resources>
    <string name="app_name">Herculean</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Workouts</string>
    <string name="menu_reflow">Profile</string>
    <string name="menu_slideshow">Leaderboard</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_hint">Create Account</string>
    <string name="login_hint">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register_here">Register here</string>
    <string name="back">Back</string>
    <string name="select_exercise_category">Select Exercise Category</string>
    <string name="cancel">Cancel</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="pick_exercise">select_exercise</string>
    <string name="choose_exercise">Choose Exercise</string>
    <string name="search">Search</string>
    <string name="gemini_api_key">AIzaSyAUPdeQYh8sbVyZ8KDfV3_yO5WczgD00ak</string>

    <string name="customize">Customize</string>
    <string name="best_workout">Best Workout</string>
    <string name="no_workouts">No workouts yet</string>
    <string name="favorite_workout">Favorite Workout</string>
    <string name="favorite_muscle">Favorite Muscle Group</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="logout_account">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="menu_reflow_settings">Profile Settings</string>

    <string name="ok">OK</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="confirm_delete">Are you sure you want to delete your account?</string>
    <string name="graphs_button">More Graphs</string>
    <string name="menu_reflow_graph">Graphs</string>

    <string-array name="gender_array">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="workouts_per_week">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
</resources>