<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_past_workouts"
            android:icon="@drawable/ic_workout"
            android:title="@string/menu_transform" />
        <item
            android:id="@+id/nav_reflow"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_reflow" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_leaderboard"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>
</menu>