<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:orientation="vertical"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="?attr/colorPrimaryContainer">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp"
        android:src="@mipmap/ic_launcher"
        android:tint="?attr/colorOnPrimaryContainer" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/nav_header_title"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium" />

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textColor="?attr/colorOnPrimaryContainer"
        android:textSize="14sp"
        android:fontFamily="sans-serif" />

</LinearLayout>
