<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_past_workouts">

    <fragment
        android:id="@+id/nav_past_workouts"
        android:name="com.example.herculean.ui.past_workouts.PastWorkoutsFragment"
        android:label="Past Workouts"
        tools:layout="@layout/fragment_past_workouts">

        <action
            android:id="@+id/action_pastWorkouts_to_workoutInfo"
            app:destination="@id/nav_workout_info" />

    </fragment>


    <fragment
        android:id="@+id/nav_reflow"
        android:name="com.example.herculean.ui.reflow.ReflowFragment"
        android:label="@string/menu_reflow"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.herculean.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.herculean.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_workout_info"
        android:name="com.example.herculean.ui.past_workouts.WorkoutInfoFragment"
        android:label="Workout Info"
        tools:layout="@layout/fragment_workout_info">

        <argument
            android:name="workout"
            app:argType="com.example.herculean.workout.Workout" />

    </fragment>

    <action
        android:id="@+id/action_global_nav_past_workouts"
        app:destination="@id/nav_past_workouts" />
    <action
        android:id="@+id/action_global_nav_reflow"
        app:destination="@id/nav_reflow" />
    <action
        android:id="@+id/action_global_nav_slideshow"
        app:destination="@id/nav_slideshow" />
    <action
        android:id="@+id/action_global_nav_settings"
        app:destination="@id/nav_settings" />

</navigation>
